# cumotion

./: .gitattributes  .gitignore  LICENSE  NOTICE  README.md  SECURITY.md
content/nvidia/collision_sphere_generation/: fanuc_m20ia_collision_spec.yaml  fanuc_m900ib700_collision_spec.yaml  franka_collision_spec.yaml
content/nvidia/robots/: cart_pole.urdf  gantry.urdf  gantry1d.urdf  gantry2d.urdf  gantry2d_anisotropic.urdf  inverted_gantry.urdf  joint_venture.urdf  slider.urdf  spinner.urdf  thirty_link_arm.urdf  three_link_arm.urdf  three_link_arm_x_axis_joints.urdf  three_link_arm_y_axis_joints.urdf
content/nvidia/shared/: cart_pole.xrdf  fanuc_m20ia.xrdf  fanuc_m900ib700.xrdf  franka_curobo.xrdf  franka_rmpflow_config_without_point_cloud.yaml  gantry.xrdf  gantry1d.xrdf  gantry2d.xrdf  gantry2d_anisotropic.xrdf  joint_venture.xrdf  nv_mimic.xrdf  slider.xrdf  spinner.xrdf  thirty_link_arm.xrdf  three_link_arm.xrdf  three_link_arm_planner_config.yaml  three_link_arm_rmpflow_config.yaml
content/nvidia/tests/motion_planning/: entry_splitter_test_data.yaml
examples/: CMakeLists.txt  LICENSE
examples/src/: kinematics_example.cpp
examples/src/trajectory_optimizer_examples/: franka_collision_free_ik_solver_example.cpp  franka_trajectory_optimizer_example.cpp  franka_trajectory_optimizer_obstacle_example.cpp
examples/src/utils/: cumotion_examples_utils.h
include/cumotion/: collision_free_ik_solver.h  collision_sphere_generator.h  composite_path_spec.h  cspace_path.h  cspace_path_spec.h  cumotion.h  ik_solver.h  kinematics.h  linear_cspace_path.h  motion_planner.h  obstacle.h  path_conversion.h  path_spec_yaml.h  pose3.h  rmpflow.h  robot_description.h  robot_world_inspector.h  rotation3.h  task_space_path.h  task_space_path_spec.h  trajectory.h  trajectory_generator.h  trajectory_optimizer.h  version.h  world.h  world_inspector.h
python/examples/collision_sphere_examples/: robot_collision_sphere_example.py
python/examples/kinematics_examples/: franka_ik_example.py
python/examples/planning_examples/: franka_planning_example.py
python/examples/rmpflow_examples/: franka_rmpflow_example.py  franka_rmpflow_trajectory_tracking_example.py
python/examples/trajectory_examples/: fanuc_m20ia_task_space_trajectory_example.py  franka_cspace_trajectory_example.py  ur10_composite_trajectory_example.py
python/examples/trajectory_optimizer_examples/: franka_collision_free_ik_solver_example.py  franka_trajectory_optimizer_example.py  franka_trajectory_optimizer_obstacle_example.py  franka_trajectory_optimizer_sdf_obstacle_example.py
python/examples/visualization_examples/: sdf_example.py  transform_visualization_example.py  world_view_occupancy_map_example.py
python/examples/visualization_examples/robot_visualizations/: fanuc_m20ia_kinematics_visualization_example.py  franka_kinematics_visualization_example.py  (+1 more)
python/tests/cumotion_core/: __init__.py  _test_helper.py  collision_free_ik_solver_task_constraints_test.py  collision_free_ik_solver_test.py  collision_sphere_generator_test.py  composite_path_spec_test.py  cspace_path_spec_test.py  ik_solver_test.py  kinematics_test.py  linear_cspace_path_test.py  motion_planner_test.py  obstacle_test.py  path_conversion_test.py  path_spec_yaml_test.py  pose3_test.py  rmpflow_test.py  robot_description_test.py  robot_world_inspector_test.py  rotation3_test.py  task_space_path_spec_test.py  trajectory_generator_test.py  trajectory_optimizer_task_constraints_test.py  trajectory_optimizer_test.py  version_test.py  world_test.py
(+208 files in other folders)
